--- a/principal/DAAD/DAAD/DAAD.Android/Properties/AndroidManifest.xml
+++ b/principal/DAAD/DAAD/DAAD.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,10 @@
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="DAAD.Android"></application>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /><!--tentar usar o GPS do celular-->
+  <uses-feature android:name="android.hardware.location" android:required="false" />
+  <uses-feature android:name="android.hardware.location.gps" android:required="false" />
+  <uses-feature android:name="android.hardware.location.network" android:required="false" />
+	<application android:usesCleartextTraffic="true" android:label="DAAD.Android"></application>
+
 </manifest>
