--- a/principal/DAAD/DAAD/DAAD/DAAD.csproj
+++ b/principal/DAAD/DAAD/DAAD/DAAD.csproj
@@ -43,6 +43,9 @@
     <EmbeddedResource Update="Pages\Master\Chat.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\Master\Configuracao.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\Master\Conta.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
