--- a/principal/DAAD/DAAD/DAAD.Android/DAAD.Android.csproj
+++ b/principal/DAAD/DAAD/DAAD.Android/DAAD.Android.csproj
@@ -121,5 +121,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\zoomin.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\facebook.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\instagram.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\twitter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\youtube.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
